Fixed spacing and formatting on all SCSS files because yall are so picky

--- a/public/assets/Styles/04.Settings/Notifications/Notifications.scss
+++ b/public/assets/Styles/04.Settings/Notifications/Notifications.scss
@@ -1,4 +1,3 @@
-
 @mixin flexCenter($direction) {
   display: flex;
   justify-content: center;
@@ -10,7 +9,6 @@
 .notification-section {
   width: 100%;
   padding: 1em;
-
 }
 
 .section-divider-title {
@@ -25,8 +23,8 @@
   padding-left: 3em;
   padding-top: 1em;
 
-  .notif-input-title{
-    color:rgb(85, 85, 85);
+  .notif-input-title {
+    color: rgb(85, 85, 85);
     margin-bottom: 0.5em;
   }
 
@@ -35,9 +33,10 @@
     height: 30px;
   }
 
-  input:focus, textarea:focus, select:focus{
+  input:focus,
+  textarea:focus,
+  select:focus {
     outline-color: rgb(113, 199, 187);
     outline-style: solid;
-}
-
+  }
 }
