--- a/public/assets/Styles/04.Settings/Profile/Profile.scss
+++ b/public/assets/Styles/04.Settings/Profile/Profile.scss
@@ -1,4 +1,3 @@
-
 @mixin flexCenter($direction) {
   display: flex;
   justify-content: center;
@@ -77,13 +76,13 @@
   }
 
   .tabs-section-cutoff {
-    color:rgb(98, 100, 100);
+    color: rgb(98, 100, 100);
     width: 95%;
   }
 
   .blurb {
     font-size: 0.9em;
-    color:rgb(110, 112, 112);
+    color: rgb(110, 112, 112);
   }
 
   .tabs-information-section {
@@ -92,7 +91,7 @@
     width: 100%;
 
     .section-divider-title {
-      color:rgb(82, 85, 85);
+      color: rgb(82, 85, 85);
       margin-left: 2em;
       margin-top: 1em;
     }
@@ -100,13 +99,13 @@
     .tabs-question-section {
       width: 100%;
       padding: 0.9em;
-      color:rgb(103, 105, 105);
+      color: rgb(103, 105, 105);
     }
 
     .info-section-question-title {
       padding-left: 1em;
       margin-bottom: 6px;
-      color:rgb(103, 105, 105);
+      color: rgb(103, 105, 105);
     }
 
     .info-section-inputs {
@@ -137,59 +136,55 @@
     }
 
     select#education {
-    margin-left: 3em;
-    width: 87%;
-    height: 30px;
-    color:rgb(103, 105, 105);
-    @media screen and (max-width: 710px) {
-      margin-left: 1em;
+      margin-left: 3em;
+      width: 87%;
+      height: 30px;
+      color: rgb(103, 105, 105);
+      @media screen and (max-width: 710px) {
+        margin-left: 1em;
+      }
     }
-   }
 
-   select#income {
-    margin-left: 3em;
-    width: 87%;
-    height: 30px;
-    color:rgb(103, 105, 105);
-    @media screen and (max-width: 710px) {
-      margin-left: 1em;
+    select#income {
+      margin-left: 3em;
+      width: 87%;
+      height: 30px;
+      color: rgb(103, 105, 105);
+      @media screen and (max-width: 710px) {
+        margin-left: 1em;
+      }
     }
-   }
 
-   select#residential-status {
-    margin-left: 3em;
-    width: 87%;
-    height: 30px;
-    color:rgb(103, 105, 105);
-    @media screen and (max-width: 710px) {
-      margin-left: 1em;
+    select#residential-status {
+      margin-left: 3em;
+      width: 87%;
+      height: 30px;
+      color: rgb(103, 105, 105);
+      @media screen and (max-width: 710px) {
+        margin-left: 1em;
+      }
     }
-   }
 
-   .info-section-household {
-    @include flexCenter(row);
-    justify-content: space-evenly;
-   }
+    .info-section-household {
+      @include flexCenter(row);
+      justify-content: space-evenly;
+    }
 
-   select#adults {
-    margin-left: 1em;
-    width: 40%;
-    height: 30px;
-    color:rgb(103, 105, 105);
-   }
+    select#adults {
+      margin-left: 1em;
+      width: 40%;
+      height: 30px;
+      color: rgb(103, 105, 105);
+    }
 
-   select#children {
-    margin-left: 2em;
-    width: 40%;
-    height: 30px;
-    color:rgb(103, 105, 105);
-   }
-
+    select#children {
+      margin-left: 2em;
+      width: 40%;
+      height: 30px;
+      color: rgb(103, 105, 105);
+    }
   }
-
-
 }
-
 
 // -------------check box styling ---- //
 .custom-checkbox {
@@ -206,7 +201,8 @@
   display: inline-block;
   border-radius: 10px;
   background: rgb(113, 199, 187)
-  url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/White_check.svg/1200px-White_check.svg.png) center/1250% no-repeat;
+    url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/White_check.svg/1200px-White_check.svg.png)
+    center/1250% no-repeat;
 }
 
 .custom-checkbox input:checked + .checkmark {
@@ -216,5 +212,3 @@
 .custom-checkbox input {
   display: none;
 }
-
-
