--- a/public/assets/Styles/04.Settings/UserSettings/UserSettings.scss
+++ b/public/assets/Styles/04.Settings/UserSettings/UserSettings.scss
@@ -1,4 +1,3 @@
-
 @mixin flexCenter($direction) {
   display: flex;
   justify-content: center;
@@ -6,7 +5,6 @@
   flex-direction: $direction;
   font-family: "Avenir";
 }
-
 
 .userSetting-input-container {
   @include flexCenter(row);
@@ -23,7 +21,6 @@
     padding-left: 1.5em;
   }
 
-
   input.userSetting-input {
     width: 90%;
     height: 30px;
@@ -32,11 +29,12 @@
     padding-left: 10px;
   }
 
-  input:focus, textarea:focus, select:focus{
+  input:focus,
+  textarea:focus,
+  select:focus {
     outline-color: rgb(113, 199, 187);
     outline-style: solid;
-}
-
+  }
 }
 
 .userSetting-delete-container {
@@ -55,7 +53,7 @@
     transition: 0.1s ease-in;
     &:hover {
       color: white;
-      background-color: #EC314A;
+      background-color: #ec314a;
       font-weight: bold;
     }
     @media all and (max-width: 700px) {
@@ -100,5 +98,4 @@
       }
     }
   }
-
 }
